# Gavr

./: .gitignore  App.cpp  App.h  CMakeLists.txt  GGame.cbp  GGame.cscope_file_list  GGame.depend  GGame.layout  Game.cpp  Game.h  README.md  UI.cpp  UI.h  main.cpp  object.cpp  object.h  Курсовая2.docx
SDL_draw-1.2.13/CodeBlocks/: SDL_draw_dynamic.cbp  SDL_draw_dynamic.depend  SDL_draw_static.cbp  libSDL_draw.def
